Fixes double scrollbar

--- a/assets/styles.scss
+++ b/assets/styles.scss
@@ -21,3 +21,8 @@ body {
 h1.title {
   font-family: "Gafata", sans-serif;
 }
+
+html {
+  overflow-x: unset;
+  overflow-y: unset;
+}
